added get status template view

--- a/src/funicular_down/templates/funicular_down/control.html
+++ b/src/funicular_down/templates/funicular_down/control.html
@@ -2,4 +2,10 @@
 
 {% block content %}
   <h2>Control</h2>
+  <a href="{% url 'funicular_down:status' %}">Get status</a>
+  {% if status %}
+    {{ status }}
+  {% else %}
+    <p>No status yet</p>
+  {% endif %}
 {% endblock content %}
