--- a/src/funicular_down/templates/funicular_down/control.html
+++ b/src/funicular_down/templates/funicular_down/control.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h2>Control</h2>
-  <a href="{% url 'funicular_down:status' %}">Get status</a>
+  <h2>Check available images</h2>
+  <a href="{% url 'funicular_down:check' %}">Retry</a>
   {% if status %}
     {{ status|safe }}
   {% else %}
-    <p>No status yet</p>
+    <p>No available images yet</p>
   {% endif %}
 {% endblock content %}
