--- a/src/funicular_down/templates/funicular_down/control.html
+++ b/src/funicular_down/templates/funicular_down/control.html
@@ -1,4 +1,4 @@
-{% extends "base_app.html" %}
+{% extends "funicular_down/base_app.html" %}
 
 {% block fud-content %}
   <h2>Check available images</h2>
